tests/format/misc/errors/typescript/value-of-abstract-property.ts
abstract class Foo {
  abstract prop = 3;
}
